--- a/Proyecto/wed.html
+++ b/Proyecto/wed.html
@@ -6,6 +6,15 @@
     <title>Bienvendios</title>
 </head>
 <body>
-    
+
+    <div class="logo/o nombre"> Logo / nombre</div>
+
+    <ul>
+    <li> <a href="wed.html">Inicio</a></li>
+     <li> <a href="proyectos.html">Proyectos</a></li>
+      <li> <a href="nosotros.html">Nosotros</a></li>
+       <li> <a href="contacto.html">Contacto</a></li>
+
+    </ul>
 </body>
 </html>
