Diseño CSS  Carrousel
Se crea el diseño CSS del carrousel para la presentación

--- a/Proyecto/proyectos.html
+++ b/Proyecto/proyectos.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    
+    <!-- Carrousel -->
+     <div class="Carrousel">
+
+        <!-- Boton izquierda -->
+
+        <div class="flecha">
+
+            <img src="../Imagenes/Carrousel/izquierda.png" alt="izquierda" class="botonFlecha">
+
+        </div>
+
+        <!-- Item a presentarse -->
+
+        <div class="imagenes">
+
+            <img src="../Imagenes/Proyecto_Ian_1/Portafolio_1.png" alt="item" class="item">
+
+        </div>
+
+        <!-- Boton derecha -->
+
+        <div class="flecha">
+
+            <img src="../Imagenes/Carrousel/derecha.png" alt="derecha" class="botonFlecha">
+
+        </div>
+
+        <!-- Botones de opcion para elegir dentro del carrousel, va aumentando segun el arreglo -->
+
+
+     </div>
+
+    <div class="botones">
+
+        <p class="punto">.</p>
+
+    </div>
+    <!-- Fin Carrousel -->
 </body>
 </html>
