correccion de ubicacion de imag

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -10,7 +10,7 @@
 <body>
 <div>
 
-    <img src="./Imagenes/Logo.jpeg" alt="Imagen logo" width="200px" height="200px">
+    <img src="../Imagenes/Logo.jpeg" alt="Imagen logo" width="200px" height="200px">
 
 </div>
 
@@ -32,8 +32,8 @@
     <p>Esperamos que disfruten nuestro trabajo y agradecemos su visita.</p>
 
     <section class="imagenes">
-        <img src="./Imagenes/Portada.jpeg" alt="Ilustracion" width="200px" height="200px">
-        <img src="./Imagenes/imag2.jpg" alt="Diseño de aplicación web" width="200px" height="200px">
+        <img src="../Imagenes/Portada.jpeg" alt="Ilustracion" width="200px" height="200px">
+        <img src="../Imagenes/imag2.jpg" alt="Diseño de aplicación web" width="200px" height="200px">
     </section>
 
 <section id="Contacto"></section>
