--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Presentacion de Portafolio </title>
+   
 </head>
 
 <body>
@@ -16,8 +17,8 @@
 
 <ul>
     <li><a href="#home"> Home </li></a>
-    <li><a href="#proyecto"> Proyecto </li></a>
-    <li><a href="#contacto"> Contacto </li></a>
+    <li><a href="./Visualizacion.html"> Proyecto </li></a>
+    <li><a href="./contacto.html"> Contacto </li></a>
 </ul>
 
 <section id="Home"></section>
@@ -26,7 +27,12 @@
     <p> Somos <strong>Nerina e Ian</strong>, estudiantes de Programación web, y presentamos este proyecto como parte de
         nuestro trabajo final. <br></br>
         Este sitio fue desarrollado aplicando las siguientes tecnologias:
+    
     </p>
+
+    <img src ="../Imagenes/imagleng.jpg" alt="Lenguajes" width="200px" height="200px">
+    
+
 
     <p>Nuestro portafolio refleja el aprendizaje, esfuerzo y creatividad adquiridos durante la cursada. </p>
     <p>Esperamos que disfruten nuestro trabajo y agradecemos su visita.</p>
