--- a/Proyecto/proyectos.html
+++ b/Proyecto/proyectos.html
@@ -47,6 +47,9 @@
     </div>
     <!-- Fin Carrousel -->
 
+    <h2>Quienes somos detras del codigo...</h2>
+    <p>Foto de Nerina <br>Presentacion</p>
+
     <script src="../JS/script.js"></script>
 </body>
 </html>
